loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: illegal start of simple pattern
  for (case <- 1 to 5){
       ^Poucet1:13: error: '<-' expected but '}' found.
} 
^